# surname-sim

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: randomsim.cpp
surname_sim/: loader.py  sim.py
surname_sim/src/: randomsim.cpp
